--- a/Android App/TrainTracking2/app/src/main/AndroidManifest.xml
+++ b/Android App/TrainTracking2/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TrackingActivity" />
+        <activity android:name=".ReservationActivity" />
+        <activity android:name=".NewsActivity" />
+        <activity android:name=".FeedbackActivity"></activity>
     </application>
 
 </manifest>
