--- a/Android App/TrainTracking2/app/src/main/AndroidManifest.xml
+++ b/Android App/TrainTracking2/app/src/main/AndroidManifest.xml
@@ -2,23 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.snov.traintracking">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TrackingActivity" />
-        <activity android:name=".ReservationActivity" />
-        <activity android:name=".NewsActivity" />
-        <activity android:name=".FeedbackActivity"></activity>
+        <activity android:name=".activities.TrackingActivity" />
+        <activity android:name=".activities.ReservationActivity" />
+        <activity android:name=".activities.NewsActivity" />
+        <activity android:name=".activities.FeedbackActivity"></activity>
     </application>
 
 </manifest>
