--- a/Android App/TrainTracking2/app/build.gradle
+++ b/Android App/TrainTracking2/app/build.gradle
@@ -38,5 +38,10 @@ dependencies {
 
     compile 'com.firebase:geofire-android:2.3.1'
 
+    //Braintree Payment gateway
+    compile 'com.braintreepayments.api:drop-in:3.3.0'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.code.gson:gson:2.8.5'
+
 }
 apply plugin: 'com.google.gms.google-services'
