News / My Reservations
News full view
My Reservations

--- a/Android App/TrainTracking2/build.gradle
+++ b/Android App/TrainTracking2/build.gradle
@@ -23,7 +23,7 @@ allprojects {
         jcenter()
     }
 
-    buildDir = "C:/tmp/${rootProject.name}/${project.name}"
+    //buildDir = "C:/tmp/${rootProject.name}/${project.name}"
 }
 
 task clean(type: Delete) {
