--- a/Android App/TrainTracking2/app/build.gradle
+++ b/Android App/TrainTracking2/app/build.gradle
@@ -22,6 +22,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support.constraint:constraint-layout:1.1.3'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:cardview-v7:26.+'
@@ -42,6 +43,8 @@ dependencies {
     compile 'com.braintreepayments.api:drop-in:3.3.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.code.gson:gson:2.8.5'
+
+    compile 'com.android.support:design:27.1.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
