--- a/Android App/TrainTracking2/app/src/main/AndroidManifest.xml
+++ b/Android App/TrainTracking2/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -48,9 +49,27 @@
         <activity android:name=".activities.SelectStationsActivity" />
         <activity android:name=".activities.Reservation.ReservationHomeActivity" />
         <activity android:name=".activities.Reservation.MyReservationsActivity" />
-        <activity android:name=".activities.Reservation.SelectSeatsActivity"></activity>
-        <activity android:name=".activities.TrainListActivity"></activity>
-        <activity android:name=".activities.Reservation.PlaceOrderActivity"></activity>
+        <activity android:name=".activities.Reservation.SelectSeatsActivity" />
+        <activity android:name=".activities.TrainListActivity" />
+        <activity android:name=".activities.Reservation.PlaceOrderActivity" />
+        <activity android:name=".activities.Reservation.PaymentActivity" />
+        <activity
+            android:name="com.braintreepayments.api.BraintreeBrowserSwitchActivity"
+            android:launchMode="singleTask">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="${applicationId}.braintree" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.NewsViewActivity"
+            android:label="@string/title_activity_news_view"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.Reservation.MyReservationViewActivity"></activity>
     </application>
 
 </manifest>
